# Position-Independent-Agent

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  _config.yml  sizes.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.understand-anything/: knowledge-graph.json
book-notes/: 02-project-overview.md
cmake/: Common.cmake  Options.cmake  PolyTransform.cmake  PostBuild.cmake  Target.cmake
docs/: 01-what-is-pic.md  02-project-overview.md  03-build-system.md  04-entry-point.md  05-core-types.md  06-memory-and-strings.md  07-compiler-runtime.md  08-algorithms.md  09-kernel-syscalls.md  10-platform-layer.md  11-crypto.md  12-networking.md  13-beacon.md  14-pic-transform.md  ARCHITECTURE-MAP.md  ONBOARDING.md
scripts/: loader.py
sizes/: 2026-03-09_0502105.json  2026-03-09_40afffc.json  2026-03-09_439180f.json  2026-03-10_04608d6.json  2026-03-10_3e67e06.json  2026-03-10_55d2fa9.json  2026-03-10_5db0aab.json  2026-03-10_90e7055.json  2026-03-10_b8ffa07.json  2026-03-12_734932c.json  2026-03-12_7c5b8f3.json  2026-03-12_dd649eb.json  2026-03-13_aa198b6.json  2026-03-14_28c9b40.json  2026-03-14_3964d94.json  2026-03-16_129a818.json  2026-03-17_1170dd0.json  2026-03-17_12d1b80.json  2026-03-17_29728a9.json  2026-03-17_4947f28.json  2026-03-17_4fabad2.json  2026-03-17_a1f37c5.json  2026-03-17_dfac3a6.json  2026-03-17_fd54899.json  2026-03-18_705782d.json  2026-03-18_d5dcc34.json  2026-03-18_faa475d.json  (+30 more)
src/: README.md  (+7 more)
tools/poly-transform/: CMakeLists.txt  README.md  main.cpp
(+160 files in other folders)
